--- a/583Project.Rmd
+++ b/583Project.Rmd
@@ -27,7 +27,8 @@ dim(le)
 
 Then, have a quick overall screening of the dataset
 ```{r}
-head(le,5)
+#NOTE: might consider to remove this since str(le) provided us same information but in a more presentable 
+#head(le,5)
 
 ```
 
@@ -61,9 +62,76 @@ le <- subset(le,select=-c(percentage.expenditure))
 ### Null Value Analysis and Handling
 Purpose : Investigate the and determine how to handle the null value in the data set
 
-There are `r dim(le)[1]` no. of rows in the dataset.  Let's set the threshold of 20% as the max. proportion of null column to be allowed in a data column.  That means, columns with na over 20% will be dropped.  The threshold is then  `r dim(le)[1] * 0.2`.  So, the following 'Population' column will be dropped.
+Missing values could have a large affect to the overall quality of the static models and machine learning models and need to be clean before using it in our training model. 
+
+Lets investigate how many missing values within our features:
+
+```{r warning = FALSE, message=FALSE}
+library(magrittr) 
+library(dplyr)  
+library(tidyr)
+
+missing.values <- le %>%
+    gather(key = "key", value = "val") %>%
+    mutate(is.missing = is.na(val)) %>%
+    group_by(key, is.missing) %>%
+    summarise(num.missing = n()) %>%
+    filter(is.missing==T) %>%
+    select(-is.missing) %>%
+    arrange(desc(num.missing)) 
+
+missing.values
+```
+
+Next Step, we could visualize the missing data to identify patterns or cluster of missing values within our data to determine the cause of the missing data and whether it is random or systematic and to highlight potential biases that may exist in our data set. Visualizing the missing value also allow to understand the extend of the missing data and determine appropriate strategies for imputing missing value, since different imputation methods could be more appropriate depending on the pattern of the missing data.
+
+```{r}
+library(ggplot2)
+library(gridExtra)
+
+missing.values <- le %>%
+  gather(key="key", value="val") %>%
+  mutate(isna=is.na(val)) %>%
+  group_by(key) %>%
+  mutate(total=n()) %>%
+  group_by(key,total,isna) %>%
+  summarise(num.isna=n()) %>%
+  mutate(pct=num.isna/total * 100)
+
+levels <- (missing.values%>%filter(isna==T) %>% arrange(desc(pct)))$key
+
+null_percentage.plot <- missing.values %>% ggplot() +
+        geom_bar(aes(x = reorder(key, desc(pct)), 
+                     y = pct, fill=isna), stat='identity', alpha=0.8) +
+      scale_x_discrete(limits = levels) +
+      scale_fill_manual(name = "", 
+                        values = c('dodgerblue2', 'coral'), 
+                        labels = c("Present", "Missing")) +
+      coord_flip() + labs(title = "Percentage of missing values", 
+                          x = 'Features', y = "% of missing values")
+
+null_inrow.plot <- le %>%
+  mutate(id = row_number()) %>%
+  gather(-id, key = "key", value = "val") %>%
+  mutate(isna = is.na(val)) %>%
+  ggplot(aes(key, id, fill = isna)) +
+    geom_raster(alpha=0.8) +
+    scale_fill_manual(name = "",
+        values = c('dodgerblue2', 'coral'),
+        labels = c("Present", "Missing")) +
+    scale_x_discrete(limits = levels) +
+    labs(x = "Features", y = "Row Number", title = "Missing values in rows") +
+    coord_flip()
+
+options(repr.plot.width = 30, repr.plot.height = 20)
+gridExtra::grid.arrange(null_percentage.plot, null_inrow.plot, ncol = 1) 
 
 
+```
+
+There are `r dim(le)[1]` no. of rows in the dataset. Acording to our Visualization, there seems to be a correlation in the appearance in missing data in feature "population", "gdp" , "income.composition.of.resources" and "schooling" indicated by the bottom plot.
+
+Let's set the threshold of 20% as the max. proportion of null column to be allowed in a data column.  That means, columns with na over 20% will be dropped.  The threshold is then  `r dim(le)[1] * 0.2`.  So, the following 'Population' column will be dropped.
 
 ```{r}
 #head(le)
@@ -87,19 +155,22 @@ for(i in 1:ncol(le)) {                                   # Replace NA in all col
 Now, all na have been handled!  Let's continue our analysis.
 
 
+
+
 ### Overall General Life Expectancy Trend
 
 Purpose : Do some visualisation to explore and identify the general data pattern, trends and clusters, etc
 
 ```{r fig.height=3, fig.width=3, message=FALSE, warning=FALSE}
 library(ggplot2)
+#install.packages("tidyverse")
 library(tidyverse)
 
 le %>%
   group_by(Year) %>%
   summarise(Life.expectancy = mean(Life.expectancy)) %>%
   ggplot(aes(x=Year,
-               y=Life.expectancy)) +    
+             y=Life.expectancy)) +    
   geom_line()
 
 ```
@@ -116,8 +187,9 @@ le %>%
   group_by(Status) %>%
   summarise(Life.expectancy = mean(Life.expectancy)) %>%
   ggplot(aes(x=Status,
-               y=Life.expectancy)) +    
-  geom_bar(stat = "identity")
+             y=Life.expectancy,
+             fill=Status)) +    
+  geom_bar(stat = "identity")+ scale_fill_manual(values=c('dodgerblue2', 'coral'))
 
 ```
 Finding :
@@ -151,6 +223,43 @@ Findings :
 
 - The mortality rate of all three age groups are generally decreasing as a whole
 - The mortality rate of the adult group, however, have fluctuation within the period
+
+
+
+
+Variable Selections(Not yet finished):
+```{r}
+head(le)
+```
+```{r}
+#convert Status and Country from type char to factor type, so that they can be used in statistical modeling where they will be implemented correctly
+le$Status <- factor(le$Status)
+le$Country <- factor(le$Country)
+```
+
+```{r}
+
+#le[] <- lapply(le, function(x) if(is.numeric(x)){
+#                     scale(x, center=TRUE, scale=TRUE)
+#                      } else x)
+
+le[,2]<-scale(le[,2])
+le[,5:22]<-scale(le[,5:22])
+head(le)
+```
+
+
+
+
+```{r}
+str(le)
+glm_model <- glm(le$Life.expectancy~., data = le, family = "poisson")
+bic_back <- step(glm_model, k=log(nrow(le)), direction="backward", trace=FALSE)
+summary(bic_back)
+
+```
+
+
 
 
 
