wrap up EDA Section 1

--- a/583Project.tex
+++ b/583Project.tex
@@ -292,6 +292,10 @@ Handling}\label{null-value-analysis-and-handling}}
 \end{Shaded}
 
 \begin{verbatim}
+## Warning: package 'dplyr' was built under R version 4.2.2
+\end{verbatim}
+
+\begin{verbatim}
 ## 
 ## Attaching package: 'dplyr'
 \end{verbatim}
@@ -313,6 +317,10 @@ Handling}\label{null-value-analysis-and-handling}}
 \FunctionTok{library}\NormalTok{(tidyr)}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'tidyr' was built under R version 4.2.2
+\end{verbatim}
 
 \begin{verbatim}
 ## 
@@ -412,9 +420,22 @@ missing data.
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(ggplot2)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'ggplot2' was built under R version 4.2.2
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(gridExtra)}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'gridExtra' was built under R version 4.2.2
+\end{verbatim}
 
 \begin{verbatim}
 ## 
@@ -1214,6 +1235,10 @@ From below results, we do not see any such cluster to split.
 \end{Shaded}
 
 \begin{verbatim}
+## Warning: package 'mclust' was built under R version 4.2.2
+\end{verbatim}
+
+\begin{verbatim}
 ## Package 'mclust' version 6.0.0
 ## Type 'citation("mclust")' for citing this R package in publications.
 \end{verbatim}
@@ -1267,7 +1292,15 @@ performance:
 \end{Shaded}
 
 \begin{verbatim}
+## Warning: package 'car' was built under R version 4.2.2
+\end{verbatim}
+
+\begin{verbatim}
 ## Loading required package: carData
+\end{verbatim}
+
+\begin{verbatim}
+## Warning: package 'carData' was built under R version 4.2.2
 \end{verbatim}
 
 \begin{verbatim}
@@ -1366,14 +1399,14 @@ performance:
 ## Gaussian finite mixture model fitted by EM algorithm 
 ## ---------------------------------------------------- 
 ## 
-## Mclust VEV (ellipsoidal, equal shape) model with 4 components: 
+## Mclust VEV (ellipsoidal, equal shape) model with 7 components: 
 ## 
-##  log-likelihood    n  df       BIC     ICL
-##       -90735.39 2778 440 -184959.7 -185021
+##  log-likelihood    n  df       BIC       ICL
+##       -85949.29 2778 761 -177932.9 -178056.3
 ## 
 ## Clustering table:
-##   1   2   3   4 
-## 509 956 860 453
+##   1   2   3   4   5   6   7 
+## 482 378 407 496 185 267 563
 \end{verbatim}
 
 \begin{Shaded}
@@ -1603,7 +1636,15 @@ performance:
 \end{Shaded}
 
 \begin{verbatim}
+## Warning: package 'glmnet' was built under R version 4.2.2
+\end{verbatim}
+
+\begin{verbatim}
 ## Loading required package: Matrix
+\end{verbatim}
+
+\begin{verbatim}
+## Warning: package 'Matrix' was built under R version 4.2.2
 \end{verbatim}
 
 \begin{verbatim}
@@ -1654,26 +1695,26 @@ performance:
 \begin{verbatim}
 ## 20 x 1 sparse Matrix of class "dgCMatrix"
 ##                                            s1
-## (Intercept)                      5.509027e+01
-## Status                          -1.085534e+00
-## Adult.Mortality                 -1.736031e-02
-## infant.deaths                    .           
-## Alcohol                         -7.518146e-03
-## Hepatitis.B                     -1.178614e-02
-## Measles                         -1.190806e-05
-## BMI                              3.967961e-02
-## under.five.deaths               -8.935363e-04
-## Polio                            2.653825e-02
-## Total.expenditure                2.902905e-02
-## Diphtheria                       3.667738e-02
-## HIV.AIDS                        -4.871748e-01
-## GDP                              4.706629e-05
-## Population                       1.435815e-10
-## thinness..1.19.years            -4.386002e-02
+## (Intercept)                      5.566793e+01
+## Status                          -1.225671e+00
+## Adult.Mortality                 -1.723016e-02
+## infant.deaths                    2.391887e-02
+## Alcohol                         -2.407424e-02
+## Hepatitis.B                     -1.409929e-02
+## Measles                         -1.165208e-05
+## BMI                              3.978760e-02
+## under.five.deaths               -1.864634e-02
+## Polio                            2.669657e-02
+## Total.expenditure                4.227257e-02
+## Diphtheria                       3.659660e-02
+## HIV.AIDS                        -4.877876e-01
+## GDP                              4.894765e-05
+## Population                       4.542322e-10
+## thinness..1.19.years            -5.241728e-02
 ## thinness.5.9.years               .           
-## Income.composition.of.resources  7.195322e+00
-## Schooling                        7.824176e-01
-## Status.val                       2.944222e-02
+## Income.composition.of.resources  7.012347e+00
+## Schooling                        7.814078e-01
+## Status.val                       4.051386e-02
 \end{verbatim}
 
 \begin{Shaded}
@@ -1709,26 +1750,26 @@ performance:
 \begin{verbatim}
 ## 20 x 1 sparse Matrix of class "dgCMatrix"
 ##                                            s1
-## (Intercept)                      5.579505e+01
-## Status                          -1.196864e+00
-## Adult.Mortality                 -1.730306e-02
-## infant.deaths                    7.964845e-03
-## Alcohol                         -2.582171e-02
-## Hepatitis.B                     -1.403020e-02
-## Measles                         -1.241183e-05
-## BMI                              3.982518e-02
-## under.five.deaths               -6.953829e-03
-## Polio                            2.697780e-02
-## Total.expenditure                4.012864e-02
-## Diphtheria                       3.742187e-02
-## HIV.AIDS                        -4.889144e-01
-## thinness..1.19.years            -4.868431e-02
+## (Intercept)                      5.592775e+01
+## Status                          -1.213783e+00
+## Adult.Mortality                 -1.726463e-02
+## infant.deaths                    1.637326e-02
+## Alcohol                         -2.490441e-02
+## Hepatitis.B                     -1.406696e-02
+## Measles                         -1.201192e-05
+## BMI                              3.980534e-02
+## under.five.deaths               -1.311626e-02
+## Polio                            2.682963e-02
+## Total.expenditure                4.125993e-02
+## Diphtheria                       3.698714e-02
+## HIV.AIDS                        -4.883208e-01
+## thinness..1.19.years            -5.064999e-02
 ## thinness.5.9.years               .           
-## Income.composition.of.resources  7.129478e+00
-## Schooling                        7.840418e-01
-## Status.val                       3.697465e-02
-## GDP_scaled                       6.881850e-01
-## Population_scaled                4.917247e-02
+## Income.composition.of.resources  7.067575e+00
+## Schooling                        7.826532e-01
+## Status.val                       3.707533e-02
+## GDP_scaled                       6.937109e-01
+## Population_scaled                3.772243e-02
 \end{verbatim}
 
 \#\#\#\#\#\#\#\#\#\#\#\#\#\#\#PCA(suggest a simpler scoring
