--- a/583Project.Rmd
+++ b/583Project.Rmd
@@ -3,6 +3,8 @@ title: "Data 583 Life Expectancy (WHO)"
 author: "Justin Chan, Kenny Tong, Viji Rajagopalan"
 date: "7 Mar, 2023"
 output:
+  html_document:
+    df_print: paged
   pdf_document:
     latex_engine: xelatex
 ---
@@ -15,44 +17,37 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ### Original Dataset Summary & Initial Data Screening
-Purpose : Let's take a snapshot of the original dataset and have a rough idea of its record
-```{r}
+#### Purpose 
+- Let's take a snapshot of the original dataset and have a rough idea of its record
+
+#### Procedure
+```{r include=FALSE}
 le <- read.csv("dataset/LifeExpectancy.csv")
 summary(le)
 ```
 Let's look at the dataset dimension first
-```{r}
+```{r include=FALSE}
 dim(le)
 ```
 
-Then, have a quick overall screening of the dataset
-```{r}
-#NOTE: might consider to remove this since str(le) provided us same information but in a more presentable 
-#head(le,5)
-
-```
-
-Here is another view :
-```{r}
+Here is another overview :
+```{r include=FALSE}
 str(le)
 ```
 
-From the above broad view, the following Conclusion/Key Findings are reached : 
-
+#### Conclusion/Key Findings : 
 - The records range is from Year 2000 to 2015
 - Columns with NA : Life Expectancy, Adult Mortality, Alcohol, Hep B, BMI, Polio, Total exp, Dip, GDP, Population, thinness..1.19, thinness.5.9, Income.composition.of.resources, Schooling
 - 'Status' Column is of the "character" data type, with values "Developing" and "Developed".  We will introduce a new column 'Status.val' to be the factor value of 'Status' for better analysis..
-- 'Percentage Expenditure' has a mean value of `r mean(le$percentage.expenditure)` and max. value of `r max(le$percentage.expenditure)`.  Spending on health is more than the GDP per capita? Look into the column definition : Expenditure on health as a percentage of Gross Domestic Product per capita(%). The data of such magnitude simply does not quite make sense. Cross check with other references (e.g. the World Bank https://data.worldbank.org/indicator/SH.XPD.CHEX.GD.ZS).  OK, let's conclude that we have hesitation about the reliability/interpretation of the value of this column, and probably would drop and skip this column for the rest of this analysis.
-- 'Population' and 'GDP' have a relatively large scale, compared with all other columns.  So, we may need to scale these two columns.
+- 'Percentage Expenditure' has a mean value of `r mean(le$percentage.expenditure)`.  Spending on health is more than the GDP per capita (!?).  Look into the column definition : Expenditure on health as a percentage of Gross Domestic Product per capita(%). The data of such magnitude simply does not quite make sense. Cross check with other references (e.g. the World Bank https://data.worldbank.org/indicator/SH.XPD.CHEX.GD.ZS).  OK, let's conclude that we have hesitation about the reliability/interpretation of the value of this column, and this column would be dropped for the rest of this analysis.
 
-Now, let's do some data wrangling based on the above conclusions :
-```{r}
+```{r include=FALSE}
 # Create a new column Status.val to represent the Status column with number
 le$Status.val <- ifelse(le$Status == "Developed",1,0)
 
 # Create a new column as the scaled version of the GDP & Population, 
-le$GDP_scaled = scale(le$GDP)
-le$Population_scaled = scale(le$Population)
+#le$GDP_scaled = scale(le$GDP)
+#le$Population_scaled = scale(le$Population)
 
 # Remove the unreliable column 
 le <- subset(le,select=-c(percentage.expenditure))
@@ -60,19 +55,19 @@ le <- subset(le,select=-c(percentage.expenditure))
 ```
 
 ### Null Value Analysis and Handling
-```{r}
+```{r include=FALSE}
 library(magrittr) 
 library(dplyr)  
 library(tidyr)
 le %>% group_by(Country) %>% summarise(COUNT = n())
 ```
-Purpose : Investigate the and determine how to handle the null value in the data set
+#### Purpose 
+- Investigate the and determine how to handle the null value in the data set.  Missing values could have a large affect to the overall quality of the static models and machine learning models and need to be clean before using it in our training model. 
 
-Missing values could have a large affect to the overall quality of the static models and machine learning models and need to be clean before using it in our training model. 
+#### Procedure
+Lets investigate how many missing values within our features.
 
-Lets investigate how many missing values within our features:
-
-```{r warning = FALSE, message=FALSE}
+```{r message=FALSE, warning=FALSE, include=FALSE}
 library(magrittr) 
 library(dplyr)  
 library(tidyr)
@@ -88,9 +83,10 @@ missing.values <- le %>%
 
 missing.values
 ```
-There are total of 2563 missing value within our dataset, we could visualize the missing data to identify patterns or cluster of missing values within our data to determine the cause of the missing data and whether it is random or systematic and to highlight potential biases that may exist in our data set. Visualizing the missing value also allow to understand the extend of the missing data and determine appropriate strategies for imputing missing value, since different imputation methods could be more appropriate depending on the pattern of the missing data.
 
-```{r}
+A brief check indicates that there are total of 2563 missing value within our dataset, we could visualize the missing data to identify patterns or cluster of missing values within our data to determine the cause of the missing data and whether it is random or systematic and to highlight potential biases that may exist in our data set. Visualizing the missing value also allow to understand the extend of the missing data and determine appropriate strategies for imputing missing value, since different imputation methods could be more appropriate depending on the pattern of the missing data.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 library(gridExtra)
 
@@ -129,7 +125,8 @@ null_inrow.plot <- le %>%
     coord_flip()
 
 library(dplyr)
-le_dropped <- le %>% filter_at(vars(Population_scaled,Population,GDP,GDP_scaled,Income.composition.of.resources,Schooling),any_vars(!is.na(.)))
+#le_dropped <- le %>% filter_at(vars(Population_scaled,Population,GDP,GDP_scaled,Income.composition.of.resources,Schooling),any_vars(!is.na(.)))
+le_dropped <- le %>% filter_at(vars(Population,GDP,Income.composition.of.resources,Schooling),any_vars(!is.na(.)))
 
 missing.values <- le_dropped %>%
   gather(key="key", value="val") %>%
@@ -175,31 +172,31 @@ gridExtra::grid.arrange(null_percentage_dropped.plot, null_inrow_dropped.plot, n
 
 ```
 
-There are `r dim(le)[1]` no. of rows in the dataset. Acording to our Visualization on left, there seems to be a correlation in the appearance in missing data in our orginal data's feature "population", "gdp" , "income.composition.of.resources" and "schooling". We could deal with this correlation in missing data by removing the the record that have missing value in all of the listed variables.
+There are `r dim(le)[1]` no. of rows in the dataset. According to our Visualization, there seems to be a correlation in the appearance in missing data in our original data's feature "population", "gdp" , "income.composition.of.resources" and "schooling". We would deal with this correlation in missing data by removing the the record that have missing value in all of the listed variables.
 
-#Check how much records do each country have:
-```{r}
+<!-- Check how much records do each country have:  -->
+```{r include=FALSE}
 le %>% group_by(Country) %>% summarise(COUNT = n())
 le_dropped %>% group_by(Country) %>% summarise(COUNT = n()) #12 country were removed after dropping some common null value (193-181)
 
 #might need to consider not using this variable 
 ```
 
-########Since we have a better approach, we might need to remove this############
-Let's set the threshold of 20% as the max. proportion of null column to be allowed in a data column.  That means, columns with na over 20% will be dropped.  The threshold is then  `r dim(le)[1] * 0.2`.  So, the following 'Population' column will be dropped.
-____________________________________________________
+<!-- ########Since we have a better approach, we might need to remove this############ -->
+<!-- Let's set the threshold of 20% as the max. proportion of null column to be allowed in a data column.  That means, columns with na over 20% will be dropped.  The threshold is then  `r dim(le)[1] * 0.2`.  So, the following 'Population' column will be dropped.  -->
+<!-- ____________________________________________________ -->
 
-#head(le)
-le <- subset(le,select=-c(Population))
-# also Population_Scaled
-le <- subset(le,select=-c(Population_scaled))
+<!-- #head(le) -->
+<!-- le <- subset(le,select=-c(Population)) -->
+<!-- # also Population_Scaled -->
+<!-- #le <- subset(le,select=-c(Population_scaled)) -->
 
-____________________________________________________
-#################################################################################
+<!-- ____________________________________________________ -->
+<!-- ################################################################################# -->
 
-For the other values, we will set the na to the respective column mean for the subsequent analysis.
+For the other values, we would set the na to the respective column mean for the subsequent analysis.
 
-```{r message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, include=FALSE}
 
 for(i in 1:ncol(le_dropped)) {                                   # Replace NA in all columns
   le_dropped[ , i][is.na(le_dropped[ , i])] <- mean(le_dropped[ , i], na.rm = TRUE)
@@ -207,16 +204,18 @@ for(i in 1:ncol(le_dropped)) {                                   # Replace NA in
 
 ```
 
-Now, all na have been handled!  Let's continue our analysis.
+#### Conclusion/Key Findings :
 
-
-
+- na values have been analyzed 
+- Data imputation have been performed as far as possible in order to prepare for the subsequent data analysis.
 
 ### Overall General Life Expectancy Trend
 
-Purpose : Do some visualisation to explore and identify the general data pattern, trends and clusters, etc
+#### Purpose 
+Do some visualisation to explore and identify the general data pattern, trends and clusters, etc
 
-```{r fig.height=3, fig.width=3, message=FALSE, warning=FALSE}
+#### Procedure
+```{r echo=FALSE, fig.height=3, fig.width=3, message=FALSE, warning=FALSE}
 library(ggplot2)
 #install.packages("tidyverse")
 library(tidyverse)
@@ -230,14 +229,7 @@ le_dropped %>%
 
 ```
 
-Findings :
-
-- The general life expectancy has been steadily increasing duration the year
-- Average Life expectancy increase from about 67 to 71.5 in 15 years.
-
-
-
-```{r fig.height=3, fig.width=3, message=FALSE, warning=FALSE}
+```{r echo=FALSE, fig.height=3, fig.width=3, message=FALSE, warning=FALSE}
 le_dropped %>%
   group_by(Status) %>%
   summarise(Life.expectancy = mean(Life.expectancy)) %>%
@@ -248,12 +240,7 @@ le_dropped %>%
 
 ```
 
-
-Finding :
-
-- Life expectancy of Developed countries are significantly higher than that of Developing countries.
-
-```{r fig.height=3, message=FALSE, warning=FALSE}
+```{r echo=FALSE, fig.height=3, message=FALSE, warning=FALSE}
 le_dropped.pivot <- pivot_longer(le_dropped,c(Adult.Mortality,under.five.deaths,infant.deaths),names_to='Mortality.Group',values_to='Mortality.Rate')
 require(gridExtra)
 
@@ -276,18 +263,19 @@ le_dropped.pivot.line <- le_dropped.pivot %>%
 grid.arrange(le_dropped.pivot.area,le_dropped.pivot.line, ncol=2)
 ```
 
-Findings :
+#### Conclusion/Key Findings
 
-- The mortality rate of all three age groups are generally decreasing as a whole
-- The mortality rate of the adult group, however, have fluctuation within the period
+- The general life expectancy has been steadily increasing along with the years, from about 67 to the new height of 71.5 in 15 years.
+- Life expectancy of Developed countries are significantly higher than that of Developing countries.
+- The mortality rate of all three age groups are generally decreasing as a whole.
+- The mortality rate of the adult group, however, have fluctuation within the period, compared with the other two groups which show steady decline over the period.
 
 
-
+### Variable Selections 
 
 ###############################################################################
 ######################Variable Selections (BIC backwards):#####################
 ###############################################################################
-
 
 
 
@@ -296,9 +284,11 @@ head(le_dropped)
 ```
 ```{r}
 #droped GDP,Population
-df = subset(le_dropped, select = -c(Country,GDP,Population) )
+#df = subset(le_dropped, select = -c(Country,GDP,Population) )
+df = subset(le_dropped, select = -c(Country) )
 #droped GDP_scaled,Population_scaled
-df_ns = subset(le_dropped, select =-c(Country,GDP_scaled,Population_scaled) )
+#df_ns = subset(le_dropped, select =-c(Country,GDP_scaled,Population_scaled) )
+df_ns = subset(le_dropped, select =-c(Country,GDP,Population) )
 head(df)
 ```
 Let's look at the distribution of different columns in the dataset.
@@ -347,9 +337,12 @@ vif(model.step.bic)
 #removed one of infant.deaths or under.five.deaths
 ```
 ```{r}
+#df1<-df[,c('Life.expectancy','Status','Adult.Mortality','infant.deaths','under.five.deaths',
+#      'Hepatitis.B','BMI','Polio','Diphtheria',
+#      'HIV.AIDS','thinness..1.19.years','Income.composition.of.resources','Schooling','GDP_scaled')]
 df1<-df[,c('Life.expectancy','Status','Adult.Mortality','infant.deaths','under.five.deaths',
       'Hepatitis.B','BMI','Polio','Diphtheria',
-      'HIV.AIDS','thinness..1.19.years','Income.composition.of.resources','Schooling','GDP_scaled')]
+      'HIV.AIDS','thinness..1.19.years','Income.composition.of.resources','Schooling','GDP')]
 
 df1$Status <- factor(df1$Status)
 #removed 'under.five.deaths', due to vif - multi collinearity from BIC selection but it decreased model
@@ -420,7 +413,7 @@ plot(ladf)
 coef(ladf)
 ```
 
-
+### PCA
 
 ###############################################################################
 ###############PCA(suggest a simpler scoring system):##########################
@@ -450,7 +443,8 @@ pca_model$rotation[,1:15]
 ###############################################################################
 
 
-df2 = subset(le_dropped, select = -c(Country,GDP_scaled,Population_scaled) )
+#df2 = subset(le_dropped, select = -c(Country,GDP_scaled,Population_scaled) )
+df2 = subset(le_dropped, select = -c(Country,GDP,Population) )
 head(df2)
 
 head(df)
